--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body {
     font-size: 85%;
 }
 
+#userbar {
+    float: right;
+    text-align: right;
+}
+
 #menu a:hover {
     background-color: #009FC1;
 }
